--- a/popup.css
+++ b/popup.css
@@ -85,3 +85,61 @@ h1 {
   margin-left: 130px;
   margin-bottom: 5px;
 }
+
+/* Define variables */
+:root {
+  --white: #fff;
+  --google-blue: #4285f4;
+  --button-active-blue: #1669f2;
+}
+
+/* Style the Google button */
+.google-btn {
+  width: 100%;
+  height: 32px;
+  margin-bottom: 1px;
+  background-color: var(--google-blue);
+  border-radius: 1px;
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+}
+
+.google-btn:hover {
+  box-shadow: 0 0 6px var(--google-blue);
+}
+
+.google-btn:active {
+  background: var(--button-active-blue);
+}
+
+/* Style the Google icon wrapper */
+.google-btn .google-icon-wrapper {
+  position: absolute;
+  margin-top: 1px;
+  margin-left: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 1px;
+  background-color: var(--white);
+}
+
+/* Style the Google icon */
+.google-btn .google-icon {
+  position: absolute;
+  margin-top: 11px;
+  margin-left: 11px;
+  width: 18px;
+  height: 18px;
+}
+
+/* Style the button text */
+.google-btn .btn-text {
+  float: right;
+  margin: 11px 11px 0 0;
+  color: var(--white);
+  font-size: 14px;
+  letter-spacing: 0.2px;
+  font-family: 'Roboto';
+}
+
+/* Import the Roboto font from Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
